# svm_cpp

./: CMakeLists.txt  README.md
include/: data_utils.hpp  image_handler.hpp  svm.hpp
src/: data_utils.cpp  inference.cpp  svm.cpp  test.cpp  train.cpp
test/: test.cpp
